src/style.scss
@use "sass:map";
@use "sass:list";
@use "sass:string";

$background: rgba(0, 0, 0, 0.4);
$blue: #33ccff;
$green: #00ff99;
$red: #f05d5e;
$yellow: #f9dc5c;
$gray: #595959;
$button_size: 18px;
$colors: (
  "green": $green,
  "yellow": $yellow,
  "red": $red,
  "gray": $gray,
);

// Generate all keyframe animations
@each $from-name, $from-color in $colors {
  @each $to-name, $to-color in $colors {
    @if $from-name != $to-name {
      @keyframes #{$from-name}-to-#{$to-name} {
        from {
          border-color: $from-color;
        }
        to {
          border-color: $to-color;
        }
      }
    }
  }
}

@mixin button {
  min-width: 24px;
  min-height: 24px;
  margin: 2.5px;
  padding: 4px;

  background-color: $background;
  background-image: none;

  transition-property: border-color;
  transition-duration: 150ms;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);

  border-width: 2px;
  border-style: solid;
  border-color: $gray;
  border-radius: 6px;

  > button {
    margin: 0;
    padding: 0;
    background-image: none;
    background-color: transparent;
  }

  &.green {
    border-color: $green;
  }
  &.yellow {
    border-color: $yellow;
  }
  &.red {
    border-color: $red;
  }
  &.gray {
    border-color: $gray;
  }

  @each $from-name, $from-color in $colors {
    @each $to-name, $to-color in $colors {
      @if $from-name != $to-name {
        &.#{$from-name}-to-#{$to-name} {
          animation: #{$from-name}-to-#{$to-name} 1s 1;
        }
      }
    }
  }

  &:checked {
    border-color: $green;
  }
  &:hover {
    border-color: $blue;
  }
}

* {
  outline: none;
  border: none;
}

window.Bar {
  font-weight: bold;

  > centerbox {
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 3px;
    padding-right: 3px;
  }

  .workspaces {
    > button {
      @include button;

      > box {
        > image {
          padding-left: 2.5px;
          padding-right: 2.5px;
          font-size: $button_size;
        }
      }
    }
  }

  .title {
    .title-client {
      min-width: 0;
      margin-left: 2.5px;
      margin-right: 2.5px;
      padding: 3px 8px;

      background-color: $background;
      border-radius: 6px;

      image {
        font-size: $button_size;
        margin-right: 7px;
      }

      label {
        font-size: 10pt;
      }

      &.active label {
        font-weight: bold;
      }

      &.inactive {
        opacity: 0.6;

        image {
          font-size: 15px;
          margin-right: 5px;
        }

        label {
          font-size: 9pt;
        }
      }
    }
  }

  .tray {
    > button,
    > menubutton {
      @include button;
    }

    .time {
      color: white;
      font-weight: bold;
    }

    image {
      font-size: $button_size;
    }
  }
}

